# ai-intel-daily

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-intel.yml  deploy-existing-pages.yml  pages-digest.yml
config/: sources.yaml
data/: manual-links.example.jsonl
docs/: ai-intel-mvp.md  database-schema.sql  deepseek-prompts.md  no-server-deployment.md  site-auth-refresh.md
intelhub/: __init__.py  cli.py  config.py  dedupe.py  deepseek.py  extract.py  fetch.py  manual.py  models.py  pipeline.py  render.py  scoring.py  site.py  timeouts.py
public/: daily-digest.json  index.html
public/archive/: index.html  index.json
public/archive/2026-06-14/: daily-digest.json  index.html
public/archive/2026-06-15/: daily-digest.json  index.html
public/archive/2026-06-16/: daily-digest.json  index.html
public/archive/2026-06-17/: daily-digest.json  index.html
public/archive/2026-06-18/: daily-digest.json  index.html
public/archive/2026-06-19/: daily-digest.json  index.html
public/archive/2026-06-20/: daily-digest.json  index.html
public/archive/2026-06-21/: daily-digest.json  index.html
public/archive/2026-06-23/: daily-digest.json  index.html
public/archive/2026-06-24/: daily-digest.json  index.html
public/archive/2026-06-25/: daily-digest.json  index.html
public/archive/2026-06-26/: daily-digest.json  index.html
public/archive/2026-06-27/: daily-digest.json  index.html
public/archive/2026-06-28/: daily-digest.json  index.html
tests/: test_intelhub.py
workers/auth-refresh/: wrangler.toml
(+7 files in other folders)
